--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,30 @@
 .BMI{
     display: grid;
-    width: 80%;
+    width: 20%;
+    padding-top: 10px;
 }
 
 div{
-    box-sizing: border-box;
-    background-color: rgb(94, 209, 98);
-    border: 3px solid black;
+    background-color: rgb(190, 212, 191);
+    /* border: 3px solid black; */
     border-radius: 1rem;
+    display: flex;
     justify-content: center;
     font-family: 'Times New Roman', Times, serif;
+}
+
+.keira{
+   font-size: 20px; 
+   display: flex;
+   justify-content: center;
+}
+
+h1{
+    display: flex;
+    justify-content: center;   
+}
+
+.d-flex{
+    display: flex;
+    justify-content: center;
 }
